--- a/web/modules/custom/ai_screening/translations/ai_screening.da.po
+++ b/web/modules/custom/ai_screening/translations/ai_screening.da.po
@@ -24,62 +24,15 @@ msgstr ""
 "PO-Revision-Date: 2025-04-28 09:12+0200\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Danish <EMAIL@ADDRESS>\n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: modules/custom/ai_screening/ai_screening.info.yml:0;0
-msgid "ai_screening"
-msgstr "ai_screening"
-
-#: modules/custom/ai_screening/ai_screening.info.yml:0 modules/custom/ai_screening/src/Plugin/Block/FrontpageHelpTextBlock.php:21
-msgid "Custom"
-msgstr "Tilpasset"
-
-#: modules/custom/ai_screening/ai_screening.links.menu.yml:0 modules/custom/ai_screening/ai_screening.links.task.yml:0 modules/custom/ai_screening/ai_screening.routing.yml:0
-msgid "Site setup"
-msgstr "Webstedsopsætning"
-
-#: modules/custom/ai_screening/ai_screening.links.menu.yml:0
-msgid "Show site setup"
-msgstr "Vis webstedsopsætning"
-
 #: modules/custom/ai_screening/ai_screening.permissions.yml:0
 msgid "Access site setup pages."
 msgstr "Adgang til webstedsopsætningssider."
-
-#: modules/custom/ai_screening/ai_screening.routing.yml:0
-msgid "Frontpage settings"
-msgstr "Forsideindstillinger"
-
-#: modules/custom/ai_screening/custom_event_dispatcher/custom_event_dispatcher.info.yml:0;0
-msgid "custom_event_dispatcher"
-msgstr "custom_event_dispatcher"
-
-#: modules/custom/ai_screening/custom_event_dispatcher/custom_event_dispatcher.info.yml:0
-msgid "Hook events"
-msgstr "Hook-hændelser"
-
-#: modules/custom/ai_screening/src/Form/FrontpageForm.php:42
-msgid "Help text message"
-msgstr "Hjælpetekstbesked"
-
-#: modules/custom/ai_screening/src/Form/FrontpageForm.php:56
-msgid "Go back"
-msgstr "Gå tilbage"
-
-#: modules/custom/ai_screening/src/Form/FrontpageForm.php:78
-msgid "Save"
-msgstr "Gem"
-
-#: modules/custom/ai_screening/src/Helper/AbstractHelper.php:62
-msgid "Exception (@type) in @location: @message"
-msgstr "Undtagelse (@type) i @location: @message"
-
-#: modules/custom/ai_screening/src/Helper/OpenIdConnectHelper.php:42
-msgid "Unblocking OIDC user @user (@id)"
-msgstr "Ophæver blokering af OIDC-bruger @user (@id)"
 
 #: modules/custom/ai_screening/src/Helper/ThemeHelper.php:37
 msgid "Create new project"
@@ -89,10 +42,61 @@ msgstr "Opret nyt projekt"
 msgid "Create new static page"
 msgstr "Opret ny statisk side"
 
-#: modules/custom/ai_screening/src/Helper/UserHelper.php:63
-msgid "Setting default language on user @user to @langcode"
-msgstr "Indstiller standardsprog for bruger @user til @langcode"
+#: modules/custom/ai_screening/ai_screening.info.yml:0
+#: modules/custom/ai_screening/src/Plugin/Block/FrontpageHelpTextBlock.php:21
+msgid "Custom"
+msgstr "Tilpasset"
+
+#: modules/custom/ai_screening/src/Helper/AbstractHelper.php:62
+msgid "Exception (@type) in @location: @message"
+msgstr "Undtagelse (@type) i @location: @message"
 
 #: modules/custom/ai_screening/src/Plugin/Block/FrontpageHelpTextBlock.php:20
 msgid "Frontpage help text"
 msgstr "Forsidehjælpetekst"
+
+#: modules/custom/ai_screening/ai_screening.routing.yml:0
+msgid "Frontpage settings"
+msgstr "Forsideindstillinger"
+
+#: modules/custom/ai_screening/src/Form/FrontpageForm.php:56
+msgid "Go back"
+msgstr "Gå tilbage"
+
+#: modules/custom/ai_screening/src/Form/FrontpageForm.php:42
+msgid "Help text message"
+msgstr "Hjælpetekstbesked"
+
+#: modules/custom/ai_screening/custom_event_dispatcher/custom_event_dispatcher.info.yml:0
+msgid "Hook events"
+msgstr "Hook-hændelser"
+
+#: modules/custom/ai_screening/src/Form/FrontpageForm.php:78
+msgid "Save"
+msgstr "Gem"
+
+#: modules/custom/ai_screening/src/Helper/UserHelper.php:63
+msgid "Setting default language on user @user to @langcode"
+msgstr "Indstiller standardsprog for bruger @user til @langcode"
+
+#: modules/custom/ai_screening/ai_screening.links.menu.yml:0
+msgid "Show site setup"
+msgstr "Vis webstedsopsætning"
+
+#: modules/custom/ai_screening/ai_screening.links.menu.yml:0
+#: modules/custom/ai_screening/ai_screening.links.task.yml:0
+#: modules/custom/ai_screening/ai_screening.routing.yml:0
+msgid "Site setup"
+msgstr "Webstedsopsætning"
+
+#: modules/custom/ai_screening/src/Helper/OpenIdConnectHelper.php:42
+msgid "Unblocking OIDC user @user (@id)"
+msgstr "Ophæver blokering af OIDC-bruger @user (@id)"
+
+#: modules/custom/ai_screening/ai_screening.info.yml:0;0
+msgid "ai_screening"
+msgstr "ai_screening"
+
+#: modules/custom/ai_screening/custom_event_dispatcher/custom_event_dispatcher.info.yml:0;0
+msgid "custom_event_dispatcher"
+msgstr "custom_event_dispatcher"
