--- a/web/modules/custom/ai_screening_reports/translations/ai_screening_reports.da.po
+++ b/web/modules/custom/ai_screening_reports/translations/ai_screening_reports.da.po
@@ -17,52 +17,52 @@ msgstr ""
 "PO-Revision-Date: 2025-04-28 09:12+0200\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Danish <EMAIL@ADDRESS>\n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+#: modules/custom/ai_screening_reports/src/Controller/AiScreeningReportsController.php:126
+msgid "A maximum of @max tracks can be displayed."
+msgstr "Maksimalt @max spor kan vises."
+
 #: modules/custom/ai_screening_reports/ai_screening_reports.info.yml:0
 msgid "AI screening reports"
 msgstr "AI-screeningsrapporter"
-
-#: modules/custom/ai_screening_reports/ai_screening_reports.info.yml:0
-msgid "Reports for AI Screening"
-msgstr "Rapporter til AI-screening"
-
-#: modules/custom/ai_screening_reports/ai_screening_reports.info.yml:0
-msgid "Custom"
-msgstr "Tilpasset"
-
-#: modules/custom/ai_screening_reports/ai_screening_reports.links.menu.yml:0
-msgid "Reports"
-msgstr "Rapporter"
-
-#: modules/custom/ai_screening_reports/ai_screening_reports.links.menu.yml:0
-msgid "Show reports"
-msgstr "Vis rapporter"
 
 #: modules/custom/ai_screening_reports/ai_screening_reports.routing.yml:0
 msgid "Create report"
 msgstr "Opret rapport"
 
-#: modules/custom/ai_screening_reports/ai_screening_reports.routing.yml:0;0
-msgid "Project"
-msgstr "Projekt"
-
-#: modules/custom/ai_screening_reports/src/Controller/AiScreeningReportsController.php:126
-msgid "A maximum of @max tracks can be displayed."
-msgstr "Maksimalt @max spor kan vises."
-
-#: modules/custom/ai_screening_reports/src/Controller/AiScreeningReportsController.php:149
-msgid "Incorrect url parameters."
-msgstr "Forkerte URL-parametre."
-
-#: modules/custom/ai_screening_reports/src/Form/CreateReport.php:54
-msgid "Select project"
-msgstr "Vælg projekt"
+#: modules/custom/ai_screening_reports/ai_screening_reports.info.yml:0
+msgid "Custom"
+msgstr "Tilpasset"
 
 #: modules/custom/ai_screening_reports/src/Form/CreateReport.php:63
 msgid "Fetch report"
 msgstr "Hent rapport"
 
+#: modules/custom/ai_screening_reports/src/Controller/AiScreeningReportsController.php:149
+msgid "Incorrect url parameters."
+msgstr "Forkerte URL-parametre."
+
+#: modules/custom/ai_screening_reports/ai_screening_reports.routing.yml:0;0
+msgid "Project"
+msgstr "Projekt"
+
+#: modules/custom/ai_screening_reports/ai_screening_reports.links.menu.yml:0
+msgid "Reports"
+msgstr "Rapporter"
+
+#: modules/custom/ai_screening_reports/ai_screening_reports.info.yml:0
+msgid "Reports for AI Screening"
+msgstr "Rapporter til AI-screening"
+
+#: modules/custom/ai_screening_reports/src/Form/CreateReport.php:54
+msgid "Select project"
+msgstr "Vælg projekt"
+
+#: modules/custom/ai_screening_reports/ai_screening_reports.links.menu.yml:0
+msgid "Show reports"
+msgstr "Vis rapporter"
